Merged in accountController-for-business-account_balance (pull request #62)
AccountController for business account balance

* businessAccount - add controller to get ledger amount for business and display on UI at the top of the page

* On business creation, create allocation based on default program on the system.
Add endpoint to get business account informations
Add posibility to create businessOwner
When a businessOwner is created an user will be created  too


Approved-by: tim.kuchlein